# boto3-assist

./: .env.docker  .env.docker.001  .env.docker.nosql.workbench  .env.unittest  .gitignore  .pre-commit-config.yaml  BREAKING_CHANGES.md  CHANGELOG.md  LICENSE-EXPLAINED.txt  LICENSE.txt  PROGRESS.md  README.md  SECURITY.md  aws_regions_with_status.json  code-headers.txt  module-headers.txt  mypy.ini  publish_to_pypi.py  publish_to_pypi.sh  pyproject.toml  pysetup.py  pysetup.sh  requirements-dev.txt  requirements.dev.txt  requirements.txt  run-checks.sh  run-unit-tests.sh
.github/workflows/: test.yml
.kiro/steering/: internal-tooling-patterns.md
.windsurf/rules/: cascade.yaml
devops/: build.py  readme.md
docs/: configuration.md  design-patterns.md  docstring-improvements.md  error-handling.md  overview.md  partial-updates-usage-guide.md  roadmap.md  tech-debt.md  type-hints-progress.md  unit-test-patterns.md
docs/issues/: BOTO3_ASSIST_BEFORE_AFTER.md  BOTO3_ASSIST_DECIMAL_PATTERN.md  BOTO3_ASSIST_IMPLEMENTATION_CHECKLIST.md
examples/cloudwatch/: log_report.py
examples/dynamodb/: QUICK_REFERENCE_KEY_DEBUGGING.md  batch_operations_example.py  conditional_writes_example.py  debug_keys_example.py  decimal_conversion_example.py  main.py  table_service.py  transactions_example.py  update_expressions_example.py  user_db_model.py  user_post_db_model.py  user_post_service.py  user_service.py  user_service_client_example.py  user_service_resource_example.py
examples/ec2/: regions_report.py
src/boto3_assist/: __init__.py  config.py  (+8 more)
tests/: test_connection_pool.py
(+186 files in other folders)
