[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boto3_assist"]

[tool.hatch.build.targets.wheel.force-include]
"src/boto3_assist/py.typed" = "boto3_assist/py.typed"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')"
]
addopts = "-m 'not integration'"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests", "examples"]
skip_gitignore = true
known_first_party = ["boto3_assist"]

[project]
name = "boto3_assist"
version = "0.50.0"

authors = [
  { name="Eric Wilson", email="boto3-assist@geekcafe.com" }
]
description = "Additional boto3 wrappers to make your life a little easier"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development"
]

dependencies = [
  "jsons",
  "aws-lambda-powertools",
  "aws-xray-sdk",
  "boto3",
  "pytz",
  "python-dotenv",
  "python-dateutil",
  "PyJWT",
  "requests",
  "types-python-dateutil",
]
